@@ -160,7 +160,7 @@ def getFFfile(name):
     """
     path = ""
     dirs = sys.path + ["dat"]
-    if name in ["amber", "charmm", "parse", "tyl06"]: name = name.upper()
+    if name in ["amber", "charmm", "parse", "tyl06", "peoepb", "swanson"]: name = name.upper()
 
     names = ["dat/%s.DAT" % name]
     
@@ -193,7 +193,7 @@ def getNamesFile(name):
     """
     path = ""
     dirs = sys.path + ["dat"]
-    if name in ["amber", "charmm", "parse", "tyl06"]: name = name.upper()
+    if name in ["amber", "charmm", "parse", "tyl06", "peoepb", "swanson"]: name = name.upper()
 
     names = ["dat/%s.names" % name]
     names.append("%s.names" % name)
